# file-norm

./: .gitignore  README.md  pyproject.toml
src/file_normalization/: __init__.py  cli.py  dates.py  names.py  normalizer.py
tests/: __init__.py  test_cli.py  test_dates.py  test_names.py  test_normalizer.py
